# Flintia

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
src/: 404.tsx  App.module.css  App.tsx  AppStorage.ts  Components.tsx  Config.ts  Data.ts  FileSys.ts  Flintia.ts  InvokeWrapper.ts  Logger.ts  Routing.tsx  SaveFs.ts  Sidebar.module.css  Sidebar.tsx  Theme.tsx  global.ts  main.css  main.tsx  util.ts  window.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  global.json  launcher.json  main.json  sub-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  debug_command.rs  flintia.rs  lib.rs  main.rs
src-tauri/src/flintia/: core.rs  font.rs  invks.rs  launcher.rs
src/Auth/: Auth.tsx
src/CmdGen/: CmdGen.tsx
src/Dev/: Dev.tsx  UnixTime.tsx
src/FFmpeg/: CommandBuilder.ts  FFmpeg.module.css  FFmpeg.tsx
src/Note/: Note.module.css  Note.tsx
src/Password/: Password.module.css  Password.tsx  PasswordFs.ts  SaveFs.ts
src/QRCode/: QRCode.tsx
src/System/: System.tsx
src/ToDo/: ToDo.tsx
src/Tools/: AspectRatioCalc.tsx  HexConverter.tsx  MinMaxValue.tsx  RatioCalc.tsx  SaveClipImage.tsx  Tools.module.css  Tools.tsx  UUIDGenerator.tsx  UnixTime.tsx  UnixToTime.tsx
src/components/: EvenlyDividedRow.tsx  Line.tsx  Overlay.tsx  OverlayWindow.tsx  PageSelect.tsx  SVGButton.tsx  SVGIcon.tsx  Search.tsx  Section.tsx  Select.tsx  Setting.tsx  ToggleSwitch.tsx  ViewGroup.tsx
src/global/: array.ts  date.ts  json.ts  map.ts  (+3 more)
(+101 files in other folders)
