[package]
name = "Flintia"
version = "2.5.4"
description = "A Tauri App"
authors = ["mugishino"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flintia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri main
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# async-await
tokio = { version ="1.50.0", features = ["process"] }
# キー操作
enigo = "0.3.0"
# システム情報取得
sysinfo = "0.36.1"
# exeアイコン取得
file_icon_provider = "1.0.0"
image = "0.25.10"
base64 = "0.22.1"
# exe実行のargs分割
shell-words = "1.1.1"
# Windowsアクセントカラー取得
windows = { version = "0.62.2", features = [
    "UI_ViewManagement",
] }
# ゴミ箱にファイルを移動
trash = "5.2.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
